* Added support for computed goals.

* Terms of polynomial score elements may now specify the floating point handling.  The default handling is to truncate decimals to integers at each term.

* Raw value for an enum in the web page is now the enum value as a string, rather than the score.  This allows multiple enum values to have the same score (1583927)

* Added the ability for multipliers on goals to be decimals

* Finished support for multiplier in subjective goals (it was already started, but not finished)

* Added support for total scores to be decimals

* Allow coefficients of terms (restriction and tiebreaker) to be decimals

* Added the ability to import a database dump into a blank database.

* Upgraded to log4j 1.2.14

* Upgraded to iText 1.4.7

* removed jakarta string taglib and used the functions built into JSTL 1.1

* switched upload libraries from uptag to commons-fileupload

* upgraded to JSTL 1.1

* upgraded tomcat to 5.5.20

* Upgraded to junit 4.1

* Found bug in database setup form that causes some HTML parsers to choke (missing quote).  Firefox seems to handle it ok though.

Release 2.10
* added the ability to dump the database as a zip file containing CSV files and the challenge descriptor.

* fixed score entry check for initialized playoff brackets to use event division instead of team division.

* added ability to choose what rounds are displayed in the printable and scoresheet generation brackets

* fixed BracketData.getNumRows to return 0 if there is a NoSuchElementExeception when trying to look up data in the _bracketData map

* modified playoff menu page choices to use consistent language for all bracket page links; removed warnings on bracket page links, as it is no longer harmful to load any of the bracket pages before playoff initialization - the bracket pages will just come up with a title and nothing else
