@@ -5,23 +5,20 @@
  */
 package fll.web.style;
 
+import java.io.IOException;
+import java.net.MalformedURLException;
+
+import junit.framework.TestCase;
+
+import org.apache.log4j.Logger;
+import org.xml.sax.SAXException;
+
 import com.meterware.httpunit.GetMethodWebRequest;
 import com.meterware.httpunit.WebConversation;
 import com.meterware.httpunit.WebRequest;
 import com.meterware.httpunit.WebResponse;
 
 import fll.TestUtils;
-
-import java.io.IOException;
-
-import java.net.MalformedURLException;
-
-import junit.framework.Assert;
-import junit.framework.TestCase;
-
-import org.apache.log4j.Logger;
-
-import org.xml.sax.SAXException;
 
 /**
  * Basic tests.
